Basic upload page

--- a/src/SourceIndexServer/Pages/index.cshtml
+++ b/src/SourceIndexServer/Pages/index.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
-@model Microsoft.SourceBrowser.SourceIndexServer.Models.IndexModel
-
+@model IndexModel
 
 <span>
   @foreach (var name in Model.Manager.GetProjectNames())
