Initial bootstrap code

--- a/src/SourceIndexServer/Pages/Upload.cshtml
+++ b/src/SourceIndexServer/Pages/Upload.cshtml
@@ -1,5 +1,8 @@
 @page
 @model UploadModel
+<title>Upload Compiler Log</title>
+
+<h2>Create repository by uploading a compiler log</h2>
 
 <form method="post" enctype="multipart/form-data">
     <div>
