--- a/src/SourceIndexServer/Pages/index.cshtml
+++ b/src/SourceIndexServer/Pages/index.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model IndexModel
+@{
+    ViewData["Title"] = "Repository View";
+}
 
 <h2>Repositories</h2>
 <p>Choose a repository to browse the code for</p>
